feat: Change config to match new project

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "contractor": "blemiec",
   "fileFormat": "xlsx",
-  "client":  "IGT",
-  "projectName": "Aurora Navigator",
+  "client":  "Allianz Direct",
+  "projectName": "MultiLoB",
   "workHours":  8,
   "dateFormat": "dd/MM/yyyy"
 }
